--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap"
       rel="stylesheet">
 
@@ -16,10 +16,27 @@
   </head>
 
   <body>
-    About
-    Services
-    Projects
-    Contact
+    <header class="header">
+      <nav class="header__menu">
+        <div class="logo-box">
+          <h2 class="logo">sunnyside</h2>
+        </div>
+        <ul class="menu__nav">
+          <li class="menu__item">
+            <a href="#" class="menu__link">About</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link">Services</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link">Projects</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link menu__link--contact">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
   </body>
 
 </html>
