--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
           </li>
         </ul>
       </nav>
+
+      <div class="header__inner">
+        <h1 class="heading-1">we are creatives</h1>
+        <img src="/images/icon-arrow-down.svg">
+      </div>
     </header>
   </body>
 
