--- a/index.html
+++ b/index.html
@@ -42,6 +42,20 @@
         <img src="/images/icon-arrow-down.svg">
       </div>
     </header>
+
+    <main>
+      <section class="section-about">
+        <div class="the-content">
+          <h2 class="heading-2">Transform your brand</h2>
+          <p class="paragraph">
+            We are a full-service creative agency specializing in helping brands grow fast.
+            Engage your clients though compelling visuals that do most of the marketing for you.
+          </p>
+          <a href="#" class="btn">Learn more</a>
+        </div>
+        <img src="/images/desktop/image-transform.jpg" alt="Transform brands" class="section-about__image">
+      </section>
+    </main>
   </body>
 
 </html>
