feat: Building the Section Services

--- a/index.html
+++ b/index.html
@@ -55,6 +55,18 @@
         </div>
         <img src="/images/desktop/image-transform.jpg" alt="Transform brands" class="section-about__image">
       </section>
+
+      <section class="section-services">
+        <div class="the-content">
+          <h2 class="heading-2">Stand out to the right audience</h2>
+          <p class="paragraph">
+            Using a collaborative formula of designers, researchers, photographers,
+            videographers, and copywrites, we'll build and extend your brand in digital places.
+          </p>
+          <a href="#" class="btn">Learn more</a>
+        </div>
+        <img src="/images/desktop/image-stand-out.jpg" alt="Transform brands" class="section-about__image">
+      </section>
     </main>
   </body>
 
