--- a/index.html
+++ b/index.html
@@ -65,7 +65,24 @@
           </p>
           <a href="#" class="btn">Learn more</a>
         </div>
-        <img src="/images/desktop/image-stand-out.jpg" alt="Transform brands" class="section-about__image">
+        <img src="/images/desktop/image-stand-out.jpg" alt="Transform brands" class="section-services__image">
+      </section>
+
+      <section class="section-projects">
+        <article class="section-projects--project-1">
+          <h2 class="heading-2">Graphic Design</h2>
+          <p>
+            Great design makes you memorable. We deliver artwork that underscores your brand
+            message and captures potencial clients attention
+          </p>
+        </article>
+        <article class="section-projects--project-2">
+          <h2 class="heading-2">Photography</h2>
+          <p>
+            Increase your credibility by getting the most stunning, high-quality
+            photos that improve your business image
+          </p>
+        </article>
       </section>
     </main>
   </body>
