feat: Building the Section Client

--- a/index.html
+++ b/index.html
@@ -84,6 +84,47 @@
           </p>
         </article>
       </section>
+
+      <section class="section-client">
+        <h2 class="heading-2">Client testimonials</h2>
+        <section class="section-client__clients">
+          <article class="section-client__client">
+            <img src="/images/image-emily.jpg" alt="Photo client" class="section-client__photo">
+            <p>
+              We put our trust in Sunnyside and they delivered, making sure our needs were met
+              and deadlines were always hit
+            </p>
+            <div class="section-client__description">
+              <h3 class="heading-3">Emily R.</h3>
+              <span class="client-status">Marketing Director</span>
+            </div>
+          </article>
+
+          <article class="section-client__client">
+            <img src="/images/image-thomas.jpg" alt="Photo client" class="section-client__photo">
+            <p>
+              Sunnyside's enthusiasm coupled with their keen interest in our brand's success made it
+              a satisfying and enjoyable experience.
+            </p>
+            <div class="section-client__description">
+              <h3 class="heading-3">Thomas S.</h3>
+              <span class="client-status">Chief Operating Officer</span>
+            </div>
+          </article>
+
+          <article class="section-client__client">
+            <img src="/images/image-jennie.jpg" alt="Photo client" class="section-client__photo">
+            <p>
+              Incredible end result! Our sales increased over 400% when
+              we worked with Sunnyside. Highly recommended.
+            </p>
+            <div class="section-client__description">
+              <h3 class="heading-3">Jennie F.</h3>
+              <span class="client-status">Business Owner</span>
+            </div>
+          </article>
+        </section>
+      </section>
     </main>
   </body>
 
