--- a/index.html
+++ b/index.html
@@ -125,6 +125,13 @@
           </article>
         </section>
       </section>
+
+      <section class="section-gallery">
+        <div class="gallery gallery--1"></div>
+        <div class="gallery gallery--2"></div>
+        <div class="gallery gallery--3"></div>
+        <div class="gallery gallery--4"></div>
+      </section>
     </main>
   </body>
 
