--- a/index.html
+++ b/index.html
@@ -133,6 +133,31 @@
         <div class="gallery gallery--4"></div>
       </section>
     </main>
+
+    <footer class="footer">
+      <h1 class="heading-1 heading-1--footer">sunnyside</h1>
+      <nav>
+        <ul class="footer__navigator">
+          <li class="footer__item">
+            <a href="" class="footer__link">About</a>
+          </li>
+          <li class="footer__item">
+            <a href="" class="footer__link">Services</a>
+          </li>
+          <li class="footer__item">
+            <a href="" class="footer__link">Projects</a>
+          </li>
+        </ul>
+
+        <div class="footer__social-media">
+          <div class="media media--1"></div>
+          <ion-icon name="logo-instagram"></ion-icon>
+          <div class="media media--2"></div>
+          <div class="media media--3"></div>
+          <div class="media media--4"></div>
+        </div>
+      </nav>
+    </footer>
   </body>
 
 </html>
